Legg til tester for sporingslogg cleanup
Kjør jobb i dev for å teste